# auth-service

./: .env  .gitignore  .pre-commit-config.yaml  README.md  install.sh  main.py  mise.toml  pyproject.toml  requirements.txt  utils.py
templates/: change-email.html  change-name.html  change-password.html  change-username.html  delete-account.html  index.html  login.html  redirect.html  reset-password.html  reset.html
templates/components/: flashes.html  header.html
