[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "black==24.10.0",
    "database-service @ git+https://github.com/timonrieger/database-service.git",
    "email-validator==2.2.0",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "flask-login==0.6.3",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.1",
    "werkzeug==3.1.1",
]
