[project]
name = "auth-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
"database-service @ git+https://github.com/timonrieger/database-service.git",
    "email-validator>=2.2.0,<3",
    "flask>=3.0.3,<4",
    "flask-cors>=5.0.0,<6",
    "flask-login>=0.6.3,<1",
    "psycopg2-binary>=2.9.9,<3",
    "python-dotenv>=1.0.1,<2",
    "werkzeug>=3.1.1,<4",
]

[tool.uv]
add-bounds = "major"
